tests/trybuild/api_resource_fail_missing_display_field.stderr
error: ApiResource requires a `name`, `user`, `username`, or `id` field for Display
 --> tests/trybuild/api_resource_fail_missing_display_field.rs:4:8
  |
4 | struct WidgetResource {
  |        ^^^^^^^^^^^^^^
