tests/trybuild/api_resource_fail_missing_display_field.rs
use hubuum_client_derive::ApiResource;

#[derive(ApiResource)]
struct WidgetResource {
    value: String,
}

fn main() {}
